--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="logo-section">
             <div class="logo">
-                <img src="logo1.jpeg" alt="TIP TOP SALON Logo">
+                <img src="logo1.jpg" alt="TIP TOP SALON Logo">
             </div>
             <h1 class="logo-text">TIP TOP SALON</h1>
             <p class="logo-slogan">Innovating for a better tomorrow</p>
