--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="logo1.jpg" alt="TIP TOP SALON Logo">
             </div>
             <h1 class="logo-text">TIP TOP SALON</h1>
-            <p class="logo-slogan">Innovating for a better tomorrow</p>
+            <p class="logo-slogan">Where Beauty Meets Perfection</p>
         </div>
         
         <div class="social-section">
